Hilfe Views eingebaut, DTOs gelöscht